08-Networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /wear
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-service
                port:
                  number: 80
    - host: "*.mycompany.com"
      http:
        paths:
          - path: /wear
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-service
                port:
                  number: 443
